Fix City Spanish translation

--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
@@ -626,7 +626,7 @@
                     "Province": "Provincia",
                     "State/Province/Region": "Estado/Provincia/Región"
                 },
-                "City": "Cuidad",
+                "City": "Ciudad",
                 "Phone": "Teléfono",
                 "Zip": {
                     "Zip Code": "Código postal",
