DDP-5923 enrollmentStatus internationalization

--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -656,6 +656,14 @@
             "DateNavyValidationRule": "Entered date is invalid"
         },
         "Prism": {
+            "EnrollmentStatusType": {
+                "Registered": "Registered",
+                "Enrolled": "Enrolled",
+                "ExitedBeforeEnrollment": "Exited before enrollment",
+                "ExitedAfterEnrollment": "Exited after enrollment",
+                "ConsentSuspended": "Consent suspended",
+                "Completed": "Completed"
+            },
             "ClearSearch": "Clear",
             "ClearSearchLabel": "Clear user search",
             "Title": "Enter the subject’s 12-digit invitation code, name, email, short id, or participant guid",
