--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
@@ -264,7 +264,7 @@
                     "Intro": "A continuación, se encuentra un navegador de datos interactivo para explorar información reportada por pacientes del MBCproject. Este contiene datos de pacientes que dieron consentimiento de los Estados Unidos y Canadá.",
                     "List": {
                         "Intro": "Información reportada por pacientes incluidos aquí son de pacientes que han completado los dos siguientes cuestionarios. Use los siguientes enlaces para poder conocer lo que pacientes responded cuando se registran:",
-                        "Item1": "Cuestionario Inicial",
+                        "Item1": "Cuestionario de inscripción inicial",
                         "Item2": "Primer Cuestionario de Seguimiento"
                     }
                 },
