--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -615,7 +615,10 @@
     "TooltipAlt": "Enfòmasyon",
     "SubjectPanel": {
       "Link": "Retounen nan rechèch sijè",
-      "Text": "Kòd envitasyon sijè a:"
+      "InvitationCode": "Kòd envitasyon sijè a:",
+      "Email": "[HT] Email:",
+      "Name": "[HT] Name:",
+      "ShortId": "[HT] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
