--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/pt.json
@@ -615,7 +615,10 @@
     "TooltipAlt": "Informação",
     "SubjectPanel": {
       "Link": "Voltar a procurar participante",
-      "Text": "Código de convite do participante:"
+      "InvitationCode": "Código de convite do participante:",
+      "Email": "[PT] Email:",
+      "Name": "[PT] Name:",
+      "ShortId": "[PT] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
