--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
@@ -615,7 +615,10 @@
     "TooltipAlt": "Thông tin",
     "SubjectPanel": {
       "Link": "Quay về Trang tìm kiếm",
-      "Text": "Mã mời:"
+      "InvitationCode": "Mã mời:",
+      "Email": "[VI] Email:",
+      "Name": "[VI] Name:",
+      "ShortId": "[VI] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
