--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/zh.json
@@ -615,7 +615,10 @@
     "TooltipAlt": "信息",
     "SubjectPanel": {
       "Link": "返回受试者查找",
-      "Text": "受试者邀请代码："
+      "InvitationCode": "受试者邀请代码：",
+      "Email": "[ZH] Email:",
+      "Name": "[ZH] Name:",
+      "ShortId": "[ZH] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
