CRC: Add header

--- a/ddp-workspace/projects/ddp-crc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-crc/src/assets/i18n/en.json
@@ -1,4 +1,14 @@
 {
+  "Header": {
+    "Links": {
+      "Home": "Home",
+      "About": "About the Study",
+      "Participation": "Participation",
+      "FAQ": "FAQ",
+      "Team": "Meet the Team",
+      "SignUp": "Sign Up"
+    }
+  },
   "HomePage": {
     "Title": "Home page"
   },
