--- a/ddp-workspace/projects/ddp-crc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-crc/src/assets/i18n/en.json
@@ -10,7 +10,73 @@
     }
   },
   "HomePage": {
-    "Title": "Home page"
+    "Cta": {
+      "Title": "Circadia is an online research study to understand circadian rhythm disorders",
+      "Description": "We're looking for people living with circadian rhythm disorders to join our completely remote, at-home study.",
+      "JoinBtn": "Join the Circadia Study"
+    },
+    "About": {
+      "Title": "About the Study",
+      "Paragraph": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore iusto nam esse ad, vel earum officia laudantium eligendi perferendis quod provident maiores doloribus, dolore eum voluptates fuga consequuntur corrupti!",
+      "Subtitle": "Questions we are trying to answer:",
+      "Questions": [
+        "Duis aute irure dolor in reprehenderit in voluptate?",
+        "Excepteur sint occaecat cupidatat non proident?",
+        "Duis aute irure dolor in reprehenderit in voluptate?"
+      ]
+    },
+    "Participation": {
+      "Title": "Participation",
+      "Description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex explicabo, reiciendis neque aliquid ratione nulla, consequatur iusto aliquam, pariatur fugiat vero itaque sequi sit magni? Deserunt, laborum minus minima rerum atque tempore nam cum porro natus magni modi repudiandae, nulla obcaecati voluptate quasi? Accusantium, corrupti ipsum. Vero vitae temporibus eum?",
+      "Subtitle": "Quick facts",
+      "Duration": "<span class=\"semibold\">Study duration:</span> 4 weeks",
+      "Provided": "<span class=\"semibold\">We provide:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita facilis sapiente voluptate nobis, consequatur nam aliquid! Quo, quia?",
+      "Activities": "<span class=\"semibold\">Activities:</span> Completing sample DNA kits, journaling about mood and meals, wearing a biosensor that tracks sleep patterns"
+    },
+    "FAQ": {
+      "Title": "Frequently Asked Questions",
+      "Description": "If your question is not answered below, you can call or email our study staff at <a class=\"link\" href=\"tel:16171234567\">1-617-123-4567</a> or <a class=\"link\" href=\"mailto:info@circadiastudy.org\">info@circadiastudy.org</a>.",
+      "Questions": [
+        {
+          "Title": "Can anybody join this study?",
+          "Answer": "TBD"
+        },
+        {
+          "Title": "What will I be asked to do?",
+          "Answer": "TBD"
+        },
+        {
+          "Title": "Is it free to participate?",
+          "Answer": "TBD"
+        },
+        {
+          "Title": "How long will the study last?",
+          "Answer": "TBD"
+        },
+        {
+          "Title": "Who is running this study?",
+          "Answer": "TBD"
+        }
+      ]
+    },
+    "Team": {
+      "Title": "Our Team",
+      "Description": "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta asperiores praesentium doloremque veritatis corporis ullam aliquid a, aliquam reprehenderit itaque quos magnam ipsum alias ad voluptatibus vero, soluta nam numquam pariatur ut fugit. Minima ratione obcaecati hic expedita doloribus quas.",
+      "Members": [
+        {
+          "Name": "Name",
+          "Title": "Title",
+          "Bio": "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta asperiores praesentium doloremque veritatis corporis ullam aliquid a, aliquam reprehenderit itaque quos magnam ipsum alias ad voluptatibus vero, soluta nam numquam pariatur ut fugit. Esentium doloremque veritatis corporis ullam. Alias ad voluptatibus vero, soluta nam numquam pariatur ut fugit.",
+          "ImageUrl": "/assets/img/team/image1.jpg"
+        },
+        {
+          "Name": "Name",
+          "Title": "Title",
+          "Bio": "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta asperiores praesentium doloremque veritatis corporis ullam aliquid a, aliquam reprehenderit itaque quos magnam ipsum alias ad voluptatibus vero, soluta nam numquam pariatur ut fugit. Esentium doloremque veritatis corporis ullam. Alias ad voluptatibus vero, soluta nam numquam pariatur ut fugit.",
+          "ImageUrl": "/assets/img/team/image2.jpg"
+        }
+      ]
+    }
   },
   "Toolkit": {
     "Dashboard": {
