--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -692,6 +692,13 @@
             "MinQueryLengthHint":  "Enter at least {{length}} characters",
             "DashboardButtonLabel":  "Navigates to dashboard for the user {{user}}",
             "WarningSize": "You can see only {{count}} participant from {{totalCount}}. Specify your search request."
+        },
+        "FileUpload": {
+          "ConfirmReuploadTitle": "Are you sure you want \nto reupload the file?",
+          "ConfirmUndoUploadTitle": "Are you sure you want \nto undo the uploaded file?",
+          "ReuploadBtnText": "Reupload",
+          "UndoBtnText": "Undo",
+          "CancelBtnText": "Cancel"
         }
     }
 }
