Circadia: setup auth0 components

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -96,6 +96,13 @@
       ]
     }
   },
+  "LoginLandingPage": {
+    "Message": "Please wait until you are redirected..."
+  },
+  "ErrorPage": {
+    "Title": "Error",
+    "Description": "Something went wrong on our side, please try again"
+  },
   "Toolkit": {
     "Dashboard": {
       "Title": "Dashboard",
