--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -619,7 +619,10 @@
     "TooltipAlt": "المعلومات",
     "SubjectPanel": {
       "Link": "العودة إلى البحث عن مشارك",
-      "Text": "رمز الدعوة الخاص بمشترك:"
+      "InvitationCode": "رمز الدعوة الخاص بمشترك:",
+      "Email": "[AR] Email:",
+      "Name": "[AR] Name:",
+      "ShortId": "[AR] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
