--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -619,7 +619,10 @@
     "TooltipAlt": "Información",
     "SubjectPanel": {
       "Link": "Regresar a la búsqueda de participantes voluntarios",
-      "Text": "Código de invitación del participante voluntario:"
+      "InvitationCode": "Código de invitación del participante voluntario:",
+      "Email": "Electrónico:",
+      "Name": "[ES] Name:",
+      "ShortId": "[ES] Subject Short ID/HRUID:"
     },
     "AdminActionPanel": {
       "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
