DDP-5899 fix error page text

--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -131,7 +131,7 @@
   },
   "ErrorPage": {
     "Title": "Something went wrong",
-    "Text": "We’re sorry, it looks like something unexpected happened. Please try refreshing your page or logging in again.git "
+    "Text": "We’re sorry, it looks like something unexpected happened. Please try refreshing your page or logging in again."
   },
   "StayInformed": {
     "Title": "Thank you for your interest!",
