sign-in-page-added

--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -158,6 +158,10 @@
     "CountMeIn": "Count Me In",
     "PreviousButton": "Previous",
     "NextButton": "Next",
-    "SubmitButton": "Submit"
+    "SubmitButton": "Submit",
+    "SignInOut": {
+      "SignIn": "Log In",
+      "SignOut": "Log Out"
+    }
   }
 }
