--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -702,9 +702,9 @@
         },
         "FileUpload": {
             "ConfirmReuploadTitle": "Are you sure you want \nto reupload the file?",
-            "ConfirmUndoUploadTitle": "Are you sure you want \nto undo the uploaded file?",
+            "ConfirmUndoUploadTitle": "Are you sure you want \nto remove uploaded file from server?",
             "ReuploadBtnText": "Reupload",
-            "UndoBtnText": "Undo",
+            "UndoBtnText": "OK",
             "CancelBtnText": "Cancel"
         }
     }
