Circadia: styling adjustments

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -128,9 +128,9 @@
       "Actions": "Actions"
     },
     "Statuses": {
-      "CREATED": "Not started",
-      "IN_PROGRESS": "In progress",
-      "COMPLETE": "Complete"
+      "Created": "Not started",
+      "InProgress": "In progress",
+      "Complete": "Complete"
     },
     "Actions": {
       "Start": "Start",
