DDP-6272 temporarily hide all links in prism dashboard for selected user since opening activity for selected user is not implemented yet

--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -495,7 +495,8 @@
             "Summary": "Summary",
             "ActivityStatus": "Status",
             "ActivityDate": "Created",
-            "ActivityActions": "Actions"
+            "ActivityActions": "Actions",
+            "HiddenTooltip": "This activity is hidden."
         },
         "ManageParticipants": {
             "GovernedParticipants": "Governed participants",
