Combine file select button and drag-and-drop block

--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -709,8 +709,7 @@
             "CancelBtnText": "Cancel",
             "MaxSize": "Max size: {{maxSize}}",
             "AllowedFileTypes": "Allowed files: {{allowedFileTypes}}",
-            "DragFiles": "Drag files to upload",
-            "ChooseFile": "Choose file",
+            "ChooseFile": "Click and select \nor drag file to upload",
             "Uploaded": "Uploaded:",
             "Size": "(size: {{size}})",
             "MaxSizeErrorMessage": "Maximum file size exceeded",
