--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -536,5 +536,20 @@
       "CREATED": "No comenzado",
       "IN_PROGRESS": "En curso"
     }
+  },
+  "EnrollmentStatus": {
+    "Prefix": "[ES] Enrollment Status: ",
+    "ContactUsTooltip": "[ES] +1 954.481.6611 or support@atfamilies.org",
+    "Messages": {
+      "Registered": "[ES] Registered",
+      "Consented": "[ES] Consented",
+      "ConsentedNeedsAssent": "[ES] Consented, Needs Assent",
+      "SubmittedPhysicianInfo": "[ES] Submitted Physician Info",
+      "SubmittedMedicalHistory": "[ES] Submitted Medical History",
+      "SubmittedGenomeStudyShippingInfo": "[ES] Submitted Genome Study Shipping Info",
+      "SubmittedEnrollment": "[ES] Submitted Enrollment / Pending Confirmation",
+      "Enrolled": "[ES] Enrolled",
+      "ContactUs": "[ES] Please Contact Us"
+    }
   }
 }
