--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -536,5 +536,20 @@
       "CREATED": "Non iniziato",
       "IN_PROGRESS": "In corso"
     }
+  },
+  "EnrollmentStatus": {
+    "Prefix": "[IT] Enrollment Status: ",
+    "ContactUsTooltip": "[IT] +1 954.481.6611 or support@atfamilies.org",
+    "Messages": {
+      "Registered": "[IT] Registered",
+      "Consented": "[IT] Consented",
+      "ConsentedNeedsAssent": "[IT] Consented, Needs Assent",
+      "SubmittedPhysicianInfo": "[IT] Submitted Physician Info",
+      "SubmittedMedicalHistory": "[IT] Submitted Medical History",
+      "SubmittedGenomeStudyShippingInfo": "[IT] Submitted Genome Study Shipping Info",
+      "SubmittedEnrollment": "[IT] Submitted Enrollment / Pending Confirmation",
+      "Enrolled": "[IT] Enrolled",
+      "ContactUs": "[IT] Please Contact Us"
+    }
   }
 }
