--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -536,5 +536,20 @@
       "CREATED": "Não iniciado",
       "IN_PROGRESS": "Em andamento"
     }
+  },
+  "EnrollmentStatus": {
+    "Prefix": "[PT] Enrollment Status: ",
+    "ContactUsTooltip": "[PT] +1 954.481.6611 or support@atfamilies.org",
+    "Messages": {
+      "Registered": "[PT] Registered",
+      "Consented": "[PT] Consented",
+      "ConsentedNeedsAssent": "[PT] Consented, Needs Assent",
+      "SubmittedPhysicianInfo": "[PT] Submitted Physician Info",
+      "SubmittedMedicalHistory": "[PT] Submitted Medical History",
+      "SubmittedGenomeStudyShippingInfo": "[PT] Submitted Genome Study Shipping Info",
+      "SubmittedEnrollment": "[PT] Submitted Enrollment / Pending Confirmation",
+      "Enrolled": "[PT] Enrolled",
+      "ContactUs": "[PT] Please Contact Us"
+    }
   }
 }
