--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -536,5 +536,20 @@
       "CREATED": "Не начато",
       "IN_PROGRESS": "В процессе"
     }
+  },
+  "EnrollmentStatus": {
+    "Prefix": "[RU] Enrollment Status: ",
+    "ContactUsTooltip": "[RU] +1 954.481.6611 or support@atfamilies.org",
+    "Messages": {
+      "Registered": "[RU] Registered",
+      "Consented": "[RU] Consented",
+      "ConsentedNeedsAssent": "[RU] Consented, Needs Assent",
+      "SubmittedPhysicianInfo": "[RU] Submitted Physician Info",
+      "SubmittedMedicalHistory": "[RU] Submitted Medical History",
+      "SubmittedGenomeStudyShippingInfo": "[RU] Submitted Genome Study Shipping Info",
+      "SubmittedEnrollment": "[RU] Submitted Enrollment / Pending Confirmation",
+      "Enrolled": "[RU] Enrolled",
+      "ContactUs": "[RU] Please Contact Us"
+    }
   }
 }
