--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -536,5 +536,20 @@
       "CREATED": "Henüz Başlanmadı",
       "IN_PROGRESS": "İşlemde"
     }
+  },
+  "EnrollmentStatus": {
+    "Prefix": "[TR] Enrollment Status: ",
+    "ContactUsTooltip": "[TR] +1 954.481.6611 or support@atfamilies.org",
+    "Messages": {
+      "Registered": "[TR] Registered",
+      "Consented": "[TR] Consented",
+      "ConsentedNeedsAssent": "[TR] Consented, Needs Assent",
+      "SubmittedPhysicianInfo": "[TR] Submitted Physician Info",
+      "SubmittedMedicalHistory": "[TR] Submitted Medical History",
+      "SubmittedGenomeStudyShippingInfo": "[TR] Submitted Genome Study Shipping Info",
+      "SubmittedEnrollment": "[TR] Submitted Enrollment / Pending Confirmation",
+      "Enrolled": "[TR] Enrolled",
+      "ContactUs": "[TR] Please Contact Us"
+    }
   }
 }
