DDP-6270 show prism link for admin instead of dashboard (#601)
* DDP-6270 show prism link for admin instead of dashboard

* DDP-6270 remove debugElement

* DDP-6270 move prism route to sdk config

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -541,6 +541,7 @@
         },
         "UserMenu": {
             "DashboardButton": "Dashboard",
+            "PrismButton": "Prism",
             "SignOutButton": "Sign Out"
         },
         "DetailsPlaceholder": {
