--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -67,8 +67,7 @@
       "Participation": {
         "Question": "How can I participate?",
         "Section1": {
-          "TextPt1": "If you or your child have ever been diagnosed with cancer, and reside in the United States, United States territories- including Puerto Rico, or Canada, you can sign up by clicking",
-          "SignUpLink": "“Count Me In”.",
+          "TextPt1": "If you or your child have ever been diagnosed with cancer, and reside in the United States, United States territories- including Puerto Rico, or Canada, you can sign up by clicking “Count Me In”. ",
           "Link": "Click here",
           "TextPt2": " to learn more about participation."
         },
