--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -1,10 +1,60 @@
 {
   "App": {
+    "HomePage": {
+      "JoinCountMeInButton": "Join Count Me In",
+      "IntroductionSection": {
+        "Title": "Have a direct impact on the future of cancer research.",
+        "Text": "Count Me In is a nonprofit research initiative that engages patients and enables them to accelerate cancer research by sharing their samples, their clinical information, and their voices."
+      },
+      "LearnMoreSection": {
+        "Title": "Every patient's experience with cancer should be counted.",
+        "Text": "Patients’ medical records, tumor samples, and personal experiences hold clues—about which cancers will respond or become resistant to which therapies—that often can’t be found in research labs or clinical trials. <span class=\"italic\">Count Me In</span> enables cancer patients anywhere to share their information with researchers everywhere, to help reveal patterns in the data.",
+        "LearnMoreAboutUsButton": "Learn more about us"
+      },
+      "JoinSection": {
+        "Title": "Who can join?",
+        "Text1": "Anyone who has ever been diagnosed with cancer may participate if they live in the USA or Canada.",
+        "Text2": "We welcome people of all ages, genders, races, ethnicities, and abilities."
+      },
+      "ParticipateSection": {
+        "Title": "Here’s how to participate",
+        "Step1": {
+          "Title": "STEP 1",
+          "Time": "10-15 minutes",
+          "Description": "Provide consent and tell us where you’ve been treated"
+        },
+        "Step2": {
+          "Title": "STEP 2",
+          "Time": "5 minutes",
+          "Description": "Answer questions about your cancer"
+        },
+        "Step3": {
+          "Title": "STEP 3",
+          "Time": "10 minutes",
+          "Description": "Provide samples (we’ll send a kit)"
+        },
+        "Step4": {
+          "Title": "STEP 4",
+          "Description": "Learn with us along the way"
+        },
+        "LearnMoreAboutParticipationButton": "Learn more about participation"
+      },
+      "StayInformedSection": {
+        "Title": "Stay informed",
+        "Text": "Sign up for our mailing list or follow us on social media",
+        "JoinMailingListButton": "Join Mailing List"
+      },
+      "CountMeInSection": {
+        "Title": "Join the movement and say Count Me In",
+        "Text": "With your help, patients can be the driving force behind transformative cancer research."
+      }
+    },
     "FAQ": {
       "Title": "Frequently Asked Questions",
       "Button": {
         "Expand": "Expand all",
-        "Collapse": "Collapse all"
+        "Collapse": "Collapse all",
+        "MoreFAQs": "More FAQs"
       },
       "What": {
         "Question": "What is Count Me In?",
@@ -27,6 +77,10 @@
         "Question": "What does Count Me In do with the data?",
         "Section1": "After removing all personal information that would readily identify individuals, data is shared freely in an effort to accelerate discoveries, enabling researchers to identify patterns in data. Batches of data are released publicly on a regular basis, and are available to all researchers—so that everyone may use the data to make discoveries and advance progress against cancer, including new medicines and diagnostics.",
         "Section2": "Quick links to released data:"
+      },
+      "HowCountMeIn": {
+        "Title": "How have patients been involved in Count Me In?",
+        "Details": "Count Me In has worked closely with patients, parents, loved ones and patient advocates within several cancer communities from the beginning of the first project, the Metastatic Breast Cancer Project, launched in 2015. Patients have been included in all aspects of the design including concept, goals, messaging, forms, and the website."
       }
     }
   },
